添加 开发模式：当鼠标在棋盘上移动时，显示对应棋点的位置坐标信息

--- a/static/css/chess.css
+++ b/static/css/chess.css
@@ -195,3 +195,12 @@
 .chess-pieces--black .chess-pieces-character {
     color: #333;
 }
+
+/*开发模式下的样式*/
+.debug-mode .chess-pieces-location:hover {
+    background: rgba(0, 0, 255, 0.1);
+}
+.debug-mode .location-show {
+    display: block !important;
+    margin-left: 20px;
+}
